--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .wrap{
     /* background-image: url("backgorund.png"); */
-    width: 300px;;
+    width: 300px;
     height: 300px;
     text-align: center;
     position: relative;
